@@ -1,3 +1,4 @@
 void xset_oprs_run_mode(Oprs_Run_Type mode);
-void register_others_inputs(Oprs *oprs);
-
+void register_other_inputs(Oprs *oprs);
+void deregister_main_loop(Oprs *oprs);
+void deregister_main_loop_just_timeout(Oprs *oprs);
